# sentinel-stream

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/executed/: 02_concept_drift_ewma_detector.html
notebooks/: 01_streaming_anomaly_detection.ipynb  02_concept_drift_ewma_detector.ipynb
rules/: default.yml
sentinel_stream/: audit.py  cli.py  config.py  logging.py  model.py  pipeline.py  rules.py  simulate.py
sentinel_stream/api/: app.py
sentinel_stream/collector/: __init__.py
sentinel_stream/collectors/: __init__.py  fs_scan.py  proc_snapshot.py
sentinel_stream/detectors/: __init__.py  ewma.py
sentinel_stream/pipeline/: __init__.py  middleware.py  runner.py
sentinel_stream/storage/: __init__.py  audit_jsonl.py  base.py  composite.py  sqlite.py
tests/: conftest.py  test_audit_chain.py  test_pipeline_storage.py  test_rules.py  test_simulate.py
