[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-stream"
version = "0.1.1"
description = "Local-first policy-driven telemetry pipeline with rules and append-only audit log"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Olivier Robert-Duboille" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.8",
  "types-PyYAML>=6.0.12.20241230",
]

[project.scripts]
sentinel-stream = "sentinel_stream.cli:main"

[tool.setuptools.packages.find]
include = ["sentinel_stream*"]
exclude = ["tests*", "rules*", "docs*"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
