[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-stream"
version = "0.2.0"
description = "Local-first policy-driven telemetry pipeline with rules and append-only audit log"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Olivier Robert-Duboille" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "rich>=13.7",
  "structlog>=24.1",
  "typer>=0.12",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.8",
  "types-PyYAML>=6.0.12.20241230",
]

[project.scripts]
sentinel-stream = "sentinel_stream.cli:main"

[tool.setuptools.packages.find]
include = ["sentinel_stream*"]
exclude = ["tests*", "rules*", "docs*"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
